[package]
name = "jolly_dumper"
version = "0.1.0"
authors = ["Alexandre Bouthinon <bouthinon.alexandre@gmail.com>"]
description = "An universal dumping/backup tool for DBMS, files, S3-like services, etc."
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
env_logger = "0.9.0"
log = "0.4.0"

[dev-dependencies]
assert_cli = "0.6.3"
rusty-hook = "^0.11.2"